// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom/Providers Simple 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-simple-service-component>
    <p>
      Static name:
    </p>
    <ul>
      
    </ul>
  </storybook-simple-service-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Custom/Providers With knobs 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-simple-service-component>
    <p>
      Dynamic knob:
    </p>
    <ul>
      
    </ul>
  </storybook-simple-service-component>
</storybook-dynamic-app-root>
`;
